--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -89,6 +89,116 @@
 \titlepage
 \end{frame}
 
+
+\section{Geometric Optics}
+
+\begin{frame}\frametitle{Ray Nature of Light}
+The word "ray" means a straight line that originates at some point.
+
+\begin{center}
+\includegraphics[width=6cm]{fig/rays.jpg}
+\end{center}
+
+The part of optics dealing with the ray aspect of light is called "geometric optics."
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Reflection}
+The angle of reflection equals the angle of incidences
+
+\begin{center}
+\includegraphics[width=6cm]{fig/reflect.png}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Rough vs Smooth Surfaces}
+
+\begin{center}
+\includegraphics[width=3.5cm]{fig/reflect_rough.png}
+\includegraphics[width=3.5cm]{fig/reflect_paper.png}
+\includegraphics[width=3.5cm]{fig/reflect_mirror.png}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Mirrors and Virtual Images}
+When we see ourselves in a mirror, it appears that our image is actually behind the mirror.
+
+\begin{center}
+\includegraphics[width=6cm]{fig/virtual.png}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Speed of Light}
+\begin{columns}
+\begin{column}{7cm}
+\begin{itemize}
+\item In 1676, Danish astronomer Ole Roemer noted the change in orbital period of Jupiter's moons depending of if the earth was moving towards or away from Jupiter. He as able to calculate speed of light to be $2.26 x 10^8 (\frac{m}{s})$.
+\item In 1887, American physicist Albert Michelson used a rotating mirror to get a more precise measurement of the speed of light. 
+\item Today, the speed of light is known as:
+\end{itemize}
+\begin{center}
+$c=2.99792458×10^8 (\frac{m}{s})$.
+\end{center}
+
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=4.5cm]{fig/c_meas.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Refraction}
+The changing of a light ray’s direction (loosely called bending) when it passes through variations in matter is called refraction.
+
+\begin{center}
+\includegraphics[width=5cm]{fig/fish.png}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Index of Refraction}
+
+\begin{columns}
+\begin{column}{6.5cm}
+The speed of flight depends strongly on the type of material. We define the index of refraction ($n$) as
+
+\begin{center}
+$n = \frac{c}{v}$
+\end{center}
+
+where $v$ is the speed of light in the material and $c$ is the speed of light in a vacuum.
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/n_table.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Snell's Law}
+
+
+\begin{center}
+\includegraphics[width=6cm]{fig/snell.png}
+\end{center}
+
+\begin{center}
+Snell's Law: $n_1 \sin{\Theta_1} = n_2 \sin{\Theta_2}$
+\end{center}
+
+
+\end{frame}
+
+
 \section{Light - a particle or a wave}
 
 \begin{frame}\frametitle{Corpuscular Theory of Light}
