--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -13,6 +13,7 @@
 \usepackage{mathtools}
 \usepackage{graphicx}
 \usepackage{graphbox}
+\usepackage{movie15}
 \usepackage{caption}
 \DeclareCaptionType{code}[Code Listing][List of Code Listings] 
 
@@ -198,6 +199,34 @@ Snell's Law: $n_1 \sin{\Theta_1} = n_2 \sin{\Theta_2}$
 
 \end{frame}
 
+\section{Polarization}
+
+\begin{frame}\frametitle{Electromagnetic Wave}
+
+\begin{center}
+\includegraphics[width=6cm]{fig/em_wave.png}
+\end{center}
+
+An Electromagnetic (EM) wave is a transverse wave where the electric and magnetic fields are perpendicular to each other and to the direction of propagation. 
+
+\begin{itemize}
+\item Light is called unpolarized if the direction of this electric field fluctuates randomly in time. 
+\item If the direction of the electric field of light is well defined, it is called polarized light. 
+\end{itemize}
+
+\end{frame}
+
+
+
+\begin{frame}\frametitle{Linear Polarization}
+
+We define the direction of polarization to be the direction parallel to the electric field.
+
+\begin{center}
+\includegraphics[width=6cm]{fig/polarization1.png}
+\end{center}
+
+\end{frame}
 
 \section{Light - a particle or a wave}
 
