--- a/bootcamp/quantum_math.tex
+++ b/bootcamp/quantum_math.tex
@@ -200,5 +200,258 @@ $x^2 + y^2 + Ax + By + C = 0$
 \end{columns}
 \end{frame}
 
+\begin{frame}\frametitle{Exponential Functions}
+\begin{itemize}
+\item Linear growth - a constant rate of change, that is,a constant number by which the output increased for each unit increase in input.
+\item Exponential growth - increase based on a constant multiplicative rate of change over equal increments of time, that is, a percent increase of the original amount over time.
+\end{itemize}
+
+\begin{center}
+\includegraphics[width=12cm]{fig/exp_growth.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Origami to the Moon}
+\begin{center}
+\includegraphics[width=12cm]{fig/40fold.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{What about Negative Exponents}
+\begin{columns}
+\begin{column}{7cm}
+The general form of an exponential function is $f(x) = ab^x$, where $a$ is any non-zero number and $b$ is an positive number not equal to 1.
+
+\begin{itemize}
+\item If $b > 1$ the function grows at a rate proportional to its size.
+\item If $0 < b < 1$ the function decays at a rate proportional to its size.
+\end{itemize}
+\end{column}
+
+\begin{column}{5cm}
+For example, $f(x) = 2^x$:
+\begin{center}
+\includegraphics[width=4cm]{fig/exp2g.jpg}
+\end{center}
+\end{column}
+\end{columns}
+
+\begin{center}
+\includegraphics[width=12cm]{fig/exp2t.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Scientific (SI) Prefixes}
+\begin{center}
+\includegraphics[width=12cm]{fig/si_prefixes.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{$e$ - an interesting aside}
+The letter e represents the irrational number:
+\begin{equation}
+e = (1 + \frac{1}{n})^n
+\end{equation}
+as $n$ increases without bound. \newline
+
+
+
+The number $e$ is used as a base for many real-world exponential models. To work with base e, we use the approximation,  $e \approx 2.718282$. The constant was named by the Swiss mathematician Leonhard Euler (1707–1783) who first investigated and discovered many of its properties.
+\end{frame}
+
+
+\begin{frame}\frametitle{Graphing Exponentials}
+\begin{columns}
+\begin{column}{7cm}
+
+Shifts:
+\begin{center}
+\includegraphics[width=6.5cm]{fig/exp2vert.jpg}
+\end{center}
+
+\begin{center}
+\includegraphics[width=6.5cm]{fig/exp2hor.jpg}
+\end{center}
+
+\end{column}
+
+\begin{column}{5cm}
+Stretch:
+\begin{center}
+\includegraphics[width=2.8cm]{fig/exp2v.jpg}
+\end{center}
+
+Flip:
+\begin{center}
+\includegraphics[width =2.8cm]{fig/exp2f.jpg}
+\end{center}
+\end{column}
+\end{columns}
+
+\end{frame}
+
+
+\section{Trigonometry}
+
+
+
+\begin{frame}\frametitle{Algebraic Functions}
+\begin{columns}
+\begin{column}{4.5cm}
+An algebraic function provides a "y-value" for every "x-value"
+\begin{itemize}
+\item Linear: $y = x + 2$
+\item Quadratic: $y = x^2$
+\item Periodic: $y = sin(x)$
+\end{itemize}
+\end{column}
+\begin{column}{8cm}
+\begin{center}
+\includegraphics[width=8cm]{fig/basicfun.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{More Desmos Fun}
+
+\begin{center}
+\includegraphics[width=12cm]{fig/desmosfun.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Pi ($\pi)$}
+
+\begin{center}
+\includegraphics[width=8cm]{fig/pi.png}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Unit Circle and Trigonometric Functions}
+The Unit Circle is a circle with a radius of 1.
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.75]{fig/unitcircle.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.75]{fig/unitcircle_cst.png}
+\end{center}
+\end{column}
+\end{columns}
+The Unit Circle can be used to map out the trigonometric values of sine, cosine, and tangent.
+\end{frame}
+
+
+\begin{frame}\frametitle{Unit Circle and the Value of $sin(\theta)$}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.25]{fig/unitcircle_sin.png}
+\end{center}
+\end{column}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[scale=0.75]{fig/unitcircle_rad.png}
+\end{center}
+\end{column}
+\end{columns}
+
+\vspace{0.25cm}
+
+\begin{itemize}
+\item $sin(\theta)$ is the y-value of the point on the Unit Circle at angle $\theta$. 
+\item In our trig functions, $\theta$ is measured in radians (rad), not degrees.
+\item 360 degrees = $2 \pi$ radians.
+\end{itemize}
+\end{frame}
+
+
+
+\begin{frame}\frametitle{Sine Waves}
+\begin{center}
+\includegraphics[scale=0.25]{fig/sin.jpg}
+\end{center}
+
+\begin{center}
+$y = A * sin(2*\pi*\nu*t) + B$
+\end{center}
+
+where A = amplitude, B = offset, $\nu$ = frequency = $\frac{1}{period}$, 
+
+and t = time in seconds.
+\end{frame}
+
+
+\begin{frame}\frametitle{Using Desmos (desmos.com/calculator)}
+\begin{center}
+\includegraphics[scale=0.35]{fig/desmos1.jpg}
+\end{center}
+\begin{center}
+
+\vspace{0.5cm}
+
+\includegraphics[scale=0.35]{fig/desmos2.jpg}
+\end{center}
+\end{frame}
+
+
+
+\begin{frame}\frametitle{SOH CAH TOA}
+
+\begin{itemize}
+\item sin = opposite over hypotenuse
+\item cos = adjacent over hypotenuse
+\item tan = opposite over adjacent
+\end{itemize}
+
+\vspace{0.25cm}
+
+\begin{center}
+\includegraphics[scale=0.35]{fig/sohcahtoa.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Scalars and Vectors}
+Scalars are quantities that are fully described by a magnitude (or numerical value) alone.
+
+Vectors are quantities that are fully described by both a magnitude and a direction.
+
+\vspace{0.25cm}
+\begin{center}
+\includegraphics[width=8cm]{fig/scalarVector.jpg}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Pythagorean Theorem in 3 Dimensions}
+\begin{columns}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/pathagorean.png}
+
+\vspace{0.25cm}
+
+\includegraphics[width=4cm]{fig/pathag3D.jpg}
+
+\end{center}
+\end{column}
+\begin{column}{5cm}
+To add orthogonal (at right angles to each other) vectors in 3 Dimensions:
+\begin{itemize}
+\item $C = \sqrt{A_x^2 + A_y^2}$
+\item $A_{total} = \sqrt{C^2 + A_z^2}$
+\item $A_{total} = \sqrt{A_x^2 + A_y^2 + A_z^2}$
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
 
 \end{document}
