--- a/bootcamp/quantum_math.tex
+++ b/bootcamp/quantum_math.tex
@@ -200,6 +200,195 @@ $x^2 + y^2 + Ax + By + C = 0$
 \end{columns}
 \end{frame}
 
+
+
+\begin{frame}\frametitle{Domain and Range}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=6cm]{fig/domain-range.png}
+\end{center}
+\end{column}
+
+\begin{column}{5cm}
+A set of ordered pairs $(x,y)$ is called a relation in x and y. 
+\begin{itemize}
+\item The set of x-values in the ordered pairs is called the domain of the relations.
+\item The set of y-values in the ordered pairs is called the range of the relations.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Linear Equations with Two Variables}
+A linear equation in variables $x$ and $y$ can be written in the standard form:
+\begin{equation}
+Ax + By = C
+\end{equation}
+
+However, it is more common to see it in slope-intercept form:
+\begin{equation}
+y = mx + b
+\end{equation}
+where, $m$ is the slope and $b$ is the y-intercept
+\end{frame}
+
+\begin{frame}\frametitle{Linear Conversion - Slope and Y-Intercept}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/slope.jpg}
+
+$y = mx + b$
+
+where $m$ is slope and $b$ y-intercept. 
+\end{center}
+\end{column}
+
+\begin{column}{5.2cm}
+For example, given two points:
+\begin{itemize}
+\item $(x_1,y_1) = (1,2)$
+\item $(x_2,y_2) = (5,4)$
+\end{itemize}
+Find slope
+\begin{itemize}
+\item $m = \frac{rise}{run} = \frac{4-2}{5-1} = \frac{1}{2}$
+\end{itemize}
+Find y-intercept
+\begin{itemize}
+\item $y_1 = m * x_1 + b$
+\item $b = y_1 - (m * x_1$)
+\item $b = 2 - (\frac{1}{2} * 1) = 1 \frac{1}{2}$
+\end{itemize}
+\end{column}
+\end{columns}
+
+\vspace{1cm}
+
+Use this to find the conversion from Celsius to Fahrenheit.
+\end{frame}
+
+\begin{frame}\frametitle{Parallel and Perpendicular Lines}
+\begin{center}
+\includegraphics[width=5.5cm]{fig/parperp.jpg}
+\end{center}
+\end{frame}
+
+
+
+\begin{frame}\frametitle{Linear Regression}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=5cm]{fig/lsqr.png}
+\end{center}
+\end{column}
+
+\begin{column}{5cm}
+Consider a set of data: $(x_1,y_1),(x_2,y_2),(x_3,y_3),...,(x_n,y_n)$
+\begin{itemize}
+\item The least-squares regression line $\hat{y} = mx + b$, is a unique line that minimizes the sum of the squared vertical deviations from the the observed data points to the line.
+\end{itemize}
+\end{column}
+\end{columns}
+
+\vspace{1cm}
+
+Use this to find the conversion from Celsius to Fahrenheit.
+\end{frame}
+
+
+\begin{frame}\frametitle{Recognizing Functions}
+\begin{columns}
+\begin{column}{4.5cm}
+An algebraic function provides a "y-value" for every "x-value"
+\begin{itemize}
+\item Linear: $y = x + 2$
+\item Quadratic: $y = x^2$
+\item Periodic: $y = sin(x)$
+\end{itemize}
+\end{column}
+\begin{column}{7cm}
+\begin{center}
+\includegraphics[width=7cm]{fig/basicfun.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Vertical and Horizontal Shifts}
+\begin{columns}
+\begin{column}{5.0cm}
+\begin{center}
+\includegraphics[height=4.5cm]{fig/shiftV.png}
+\end{center}
+\end{column}
+\begin{column}{6.0cm}
+\begin{center}
+\includegraphics[height=4.5cm]{fig/shiftH.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Shrink and Expand}
+
+\begin{center}
+\includegraphics[height=6.0cm]{fig/stretchV.png}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{X and Y Reflections}
+\begin{columns}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[height=4.5cm]{fig/reflectX.png}
+\end{center}
+\end{column}
+\begin{column}{5.5cm}
+\begin{center}
+\includegraphics[height=4.5cm]{fig/reflectY.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Summary - Transformations of Functions}
+\begin{center}
+\includegraphics[width=10cm]{fig/transform.jpg}
+\end{center}
+\end{frame}
+
+
+\begin{frame}\frametitle{Piece-Wise Functions}
+\begin{columns}
+\begin{column}{6cm}
+\begin{center}
+\includegraphics[width=6cm]{fig/pwfunct1.png}
+\end{center}
+\end{column}
+\begin{column}{5cm}
+\begin{center}
+\includegraphics[width=6cm]{fig/pwfunct2.jpg}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}\frametitle{Rate of Change}
+
+\end{frame}
+
+\begin{frame}\frametitle{Operations on Functions}
+
+\end{frame}
+
+
 \begin{frame}\frametitle{Exponential Functions}
 \begin{itemize}
 \item Linear growth - a constant rate of change, that is,a constant number by which the output increased for each unit increase in input.
@@ -211,6 +400,7 @@ $x^2 + y^2 + Ax + By + C = 0$
 \end{center}
 
 \end{frame}
+
 
 \begin{frame}\frametitle{Origami to the Moon}
 \begin{center}
@@ -306,9 +496,9 @@ An algebraic function provides a "y-value" for every "x-value"
 \item Periodic: $y = sin(x)$
 \end{itemize}
 \end{column}
-\begin{column}{8cm}
+\begin{column}{7cm}
 \begin{center}
-\includegraphics[width=8cm]{fig/basicfun.jpg}
+\includegraphics[width=7cm]{fig/basicfun.jpg}
 \end{center}
 \end{column}
 \end{columns}
@@ -417,6 +607,8 @@ and t = time in seconds.
 \includegraphics[scale=0.35]{fig/sohcahtoa.jpg}
 \end{center}
 \end{frame}
+
+\section{Vectors}
 
 \begin{frame}\frametitle{Scalars and Vectors}
 Scalars are quantities that are fully described by a magnitude (or numerical value) alone.
