--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -323,6 +323,38 @@ We define the direction of polarization to be the direction parallel to the elec
 
 \end{frame}
 
+\begin{frame}\frametitle{Linear Polarization - Off Axis}
+
+\url{https://www.mathsisfun.com/algebra/vector-calculator.html}
+
+\begin{center}
+\includegraphics[width=12cm]{fig/pol1.jpg}
+\end{center}
+
+\begin{equation}
+\vec{E} = 3 \sin{(t)} \vec{i} + 4 \sin{(t)} \vec{j}
+\end{equation}
+
+\end{frame}
+
+\begin{frame}\frametitle{Circular Polarization}
+
+\url{https://www.mathsisfun.com/algebra/vector-calculator.html}
+
+
+\begin{center}
+\includegraphics[width=12cm]{fig/pol2.jpg}
+\end{center}
+
+X lags Y by $\frac{\pi}{2}$:
+\begin{equation}
+\vec{E} = 4 \sin{(t + \frac{\pi}{2})} \vec{i} + 4 \sin{(t)} \vec{j}
+\end{equation}
+
+\end{frame}
+
+
+
 \section{Interferometry}
 
 \begin{frame}\frametitle{Michelson Interferometer}
