--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -354,6 +354,37 @@ X lags Y by $\frac{\pi}{2}$:
 \end{frame}
 
 
+\begin{frame}\frametitle{Incoming $45^\circ$ with Half-Wave Plate}
+From \url{https://emanim.szialab.org/}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/waveplate_45_2.png}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Incoming $45^\circ$ with Quarter-Wave Plate}
+From \url{https://emanim.szialab.org/}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/waveplate_45_4.png}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Incoming $37^\circ$ with Half-Wave Plate}
+From \url{https://emanim.szialab.org/}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/waveplate_37_2.png}
+\end{center}
+\end{frame}
+
+\begin{frame}\frametitle{Incoming $37^\circ$ with Quarter-Wave Plate}
+From \url{https://emanim.szialab.org/}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/waveplate_37_4.png}
+\end{center}
+\end{frame}
 
 \section{Interferometry}
 
