--- a/bootcamp/quantum.tex
+++ b/bootcamp/quantum.tex
@@ -323,6 +323,17 @@ We define the direction of polarization to be the direction parallel to the elec
 
 \end{frame}
 
+\begin{frame}\frametitle{Linear Polarizer}
+
+Natural light has polarizations in random directions, it is unpolarized.
+
+\begin{center}
+\includegraphics[width=6cm]{fig/polarizer.jpg}
+\end{center}
+
+\end{frame}
+
+
 \begin{frame}\frametitle{Linear Polarization - Off Axis}
 
 \url{https://www.mathsisfun.com/algebra/vector-calculator.html}
