--- a/bootcamp/quantum_math.tex
+++ b/bootcamp/quantum_math.tex
@@ -426,6 +426,105 @@ m = \frac{f(x+h) - f(x)}{(x+h) - x} = \frac{f(x+h) - f(x)}{h}
 \end{frame}
 
 
+\subsection{Polynomial Functions}
+
+\begin{frame}\frametitle{Quadratic Function}
+
+A quadratic function is often used as a model for the projectile motion. This is the motion followed by an object influenced by an initial force and by the force of gravity.
+
+\begin{center}
+\includegraphics[width=8cm]{fig/basketball.png}
+\end{center}
+
+\end{frame}
+
+
+
+\begin{frame}\frametitle{Quadratic Function - Vertex Form}
+\begin{columns}
+\begin{column}{3.5cm}
+\begin{center}
+\includegraphics[height=3cm]{fig/quadup.png}
+
+\vspace{0.25cm}
+
+\includegraphics[height=3cm]{fig/quaddown.png}
+\end{center}
+\end{column}
+\begin{column}{7.5cm}
+Quadratic Function: $f(x) = ax_2 + bx + c (a \neq 0)$
+
+By completing the square, it can be expressed in vertex form: $f(x) = a(x-h)^2 + k$
+\begin{itemize}
+\item The graft of f(x) is a parabola with vertex $(h,k)$
+\item If $a>0$ the parabola opens upward and minimum value is $k$.
+\item If $a>0$ the parabola opens downward and maximum value is $k$.
+\item The axis of symmetry is $x=h$.
+\end{itemize}
+\end{column}
+\end{columns}
+\end{frame}
+
+
+\begin{frame}\frametitle{Polynomial Functions}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/poly1.jpg}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Even and Odd Exponents}
+\begin{columns}
+\begin{column}{5.5cm}
+
+Even:
+\begin{center}
+\includegraphics[width=5cm]{fig/polyeven.png}
+\end{center}
+
+
+
+\end{column}
+
+\begin{column}{5.5cm}
+Odd:
+\begin{center}
+\includegraphics[width=5cm]{fig/polyodd.png}
+\end{center}
+
+\end{column}
+\end{columns}
+
+\end{frame}
+
+\begin{frame}\frametitle{Polynomial End Behavior}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/poly2.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Polynomial Finding Zeros}
+
+\begin{center}
+
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Rational Functions}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/ratfun1.jpg}
+\end{center}
+
+\end{frame}
+
+
+
 \begin{frame}\frametitle{Exponential Functions}
 \begin{itemize}
 \item Linear growth - a constant rate of change, that is,a constant number by which the output increased for each unit increase in input.
@@ -518,6 +617,100 @@ Flip:
 
 \end{frame}
 
+\begin{frame}\frametitle{Logarithmic Functions}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/log1.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Natural Log}
+
+\begin{center}
+\includegraphics[width=10cm]{fig/logln.jpg}
+\end{center}
+
+\end{frame}
+
+\begin{frame}\frametitle{Logarithmic Functions}
+
+\begin{table}[H]
+    \centering
+    
+  \begin{tabular}{|l|c|l|}
+    \hline \hline
+	Logarithmic form: $y =log_b x$ & & Exponential form: $b^y = x$ \\
+   \hline  $log_2 16 = 4$ & $\Longleftrightarrow$ & $2^4 = 16$ \\
+   \hline  $log_10 \frac{1}{100} = -2$ & $\Longleftrightarrow$ & $10^{-2} = \frac{1}{100}$ \\
+   \hline  $log_7 1 = 0$ & $\Longleftrightarrow$ & $7^0 = 1$ \\
+\hline \hline
+  \end{tabular}
+\end{table}
+
+\end{frame}
+
+\begin{frame}\frametitle{Graphing Exponential and Logarithmic Functions }
+
+\begin{center}
+\includegraphics[width=10cm]{fig/loggraph.jpg}
+\end{center}
+
+\end{frame}
+
+
+\begin{frame}\frametitle{Logarithmic Transforms}
+\begin{columns}
+\begin{column}{6cm}
+
+
+\begin{center}
+\includegraphics[width=5cm]{fig/logtran1.png}
+\end{center}
+
+
+\end{column}
+
+\begin{column}{6cm}
+
+\begin{center}
+\includegraphics[width=5cm]{fig/logtran2.png}
+\end{center}
+
+\end{column}
+\end{columns}
+
+\end{frame}
+
+\begin{frame}\frametitle{Logarithm Rules}
+\begin{itemize}
+\item Product Property
+
+\begin{equation}
+log_b(xy) = log_b(x) + log_b(y)
+\end{equation}
+
+\item Quotient Property
+
+\begin{equation}
+log_b(\frac{x}{y}) = log_b(x) - log_b(y)
+\end{equation}
+
+\item Power Property
+
+\begin{equation}
+log_b x^p = p \cdot log_b x
+\end{equation}
+
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}\frametitle{Properties of Logarithms}
+\begin{center}
+\includegraphics[width=10cm]{fig/logprop.jpg}
+\end{center}
+\end{frame}
 
 \section{Trigonometry}
 
@@ -875,6 +1068,10 @@ To add orthogonal (at right angles to each other) vectors in 3 Dimensions:
 \end{columns}
 \end{frame}
 
+
+
+
+
 \section{Probability and Statistics}
 
 \begin{frame}\frametitle{Statistics}
@@ -904,5 +1101,9 @@ To add orthogonal (at right angles to each other) vectors in 3 Dimensions:
 \end{itemize}
 \end{frame}
 
+
+\begin{frame}\frametitle{Probability}
+
+\end{frame}
 
 \end{document}
